<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_a_t"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_a_t"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_o_safety"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_o_safety"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_dos"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_dos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_ohns_laws"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_ohns_laws"
        app:showAsAction="ifRoom" />



</menu>