<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_fuel_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.constructefile.democonstract.Activity.FuelRecordActivity"
    tools:showIn="@layout/activity_fuel_record">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/dateTV"
            android:textColor="#595959"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateSW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:textColor="#595959"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/truckTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/truckTV"
            android:textColor="#595959"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/truckSW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:textColor="#595959"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deptTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/deptTV"
            android:textColor="#595959"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/deptSW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="department name"
            android:padding="5dp"
            android:textColor="#595959"
            android:textStyle="italic" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--<TextView
            android:id="@+id/modellTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modelTV"
            android:textColor="#595959"
            android:textStyle="bold" />

        &lt;!&ndash; Spinner Dropdown &ndash;&gt;
        <Spinner
            android:id="@+id/spinnerModel"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#595959" />-->

        <TextView
            android:id="@+id/seriallTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/serialTV"
            android:textColor="#595959"
            android:textStyle="bold" />

        <!-- Spinner Dropdown -->
        <Spinner
            android:id="@+id/spinnerSerial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:layout_weight="2"
            android:prompt="@string/spinner"
            android:textColor="#595959" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/operatorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="Operator:"
            android:textColor="#595959"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operatorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:textColor="#595959"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#bababa" />

        <TextView
            android:id="@+id/fuelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fuelTV"
            android:textColor="#595959"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/fuel_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/checkbox_ok"
            android:buttonTint="@color/colorPrimary"
            android:textColor="#595959" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/radiatorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/radiatorTV"
            android:textColor="#595959"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/radiator_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/checkbox_ok"
            android:textColor="#595959" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#bababa" />

        <TextView
            android:id="@+id/engineOilTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/engineOilTV"
            android:textColor="#595959"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/engineOil_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/checkbox_ok"
            android:textColor="#595959" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bababa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <!--<TextView
            android:textColor="#595959"
            android:id="@+id/shiftTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shiftTV"
            android:textStyle="bold" />

        <TextView
            android:textColor="#595959"
            android:id="@+id/shiftSW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textSize="12sp"
            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/hourTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/hourTV"
            android:textColor="#595959"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/hour_meter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/checkbox_ok"
            android:buttonTint="@color/colorPrimary"
            android:textColor="#595959" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#bababa" />

        <TextView
            android:id="@+id/hydraulicTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/hydraulicTV"
            android:textColor="#595959"
            android:textSize="12sp"
            android:padding="5dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/hydraulic_check"
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:buttonTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/checkbox_ok"
            android:textColor="#595959" />

    </LinearLayout>
</LinearLayout>